# ws-load-test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pipecat-config.yaml  pyproject.toml
pipecat_load_tester/: __init__.py  audio.py  cli.py  config.py  connection.py  frames.proto  metrics.py  orchestrator.py
pipecat_load_tester/api/: __init__.py  main.py  models.py  session_manager.py  websocket_client.py
