[project]
name = "pipecat-load-tester"
version = "0.1.0"
description = "Load testing tool for Pipecat voice bots"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [
    {name = "Think41"}
]
keywords = ["pipecat", "load-testing", "voice-bot", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "protobuf>=4.25.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "grpcio-tools>=1.60.0",
]

[project.scripts]
pipecat-load-test = "pipecat_load_tester.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pipecat_load_tester = ["frames.proto"]
